tests/data/cloud_custodian/google/global/ecc-gcp-104-default_firewall_rule_in_use/resources.json
[
  {
    "kind": "compute#firewall",
    "id": "1227136820292673506",
    "creationTimestamp": "2024-09-26T06:26:37.661-07:00",
    "name": "default-allow-icmp",
    "description": "Allow ICMP from anywhere",
    "network": "https://www.googleapis.com/compute/v1/projects/testing-project-123/global/networks/default",
    "priority": 65534,
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "allowed": [
      {
        "IPProtocol": "icmp"
      }
    ],
    "direction": "INGRESS",
    "logConfig": {
      "enable": false
    },
    "disabled": false,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/testing-project-123/global/firewalls/default-allow-icmp",
    "c7n:MatchedFilters": [
      "network",
      "name"
    ]
  },
  {
    "kind": "compute#firewall",
    "id": "3339756659677913058",
    "creationTimestamp": "2024-09-26T06:26:37.596-07:00",
    "name": "default-allow-internal",
    "description": "Allow internal traffic on the default network",
    "network": "https://www.googleapis.com/compute/v1/projects/testing-project-123/global/networks/default",
    "priority": 65534,
    "sourceRanges": [
      "10.128.0.0/9"
    ],
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "0-65535"
        ],
        "portRanges": [
          {
            "beginPort": "0",
            "endPort": "65535"
          }
        ]
      },
      {
        "IPProtocol": "udp",
        "ports": [
          "0-65535"
        ],
        "portRanges": [
          {
            "beginPort": "0",
            "endPort": "65535"
          }
        ]
      },
      {
        "IPProtocol": "icmp"
      }
    ],
    "direction": "INGRESS",
    "logConfig": {
      "enable": false
    },
    "disabled": false,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/testing-project-123/global/firewalls/default-allow-internal",
    "c7n:MatchedFilters": [
      "network",
      "name"
    ]
  },
  {
    "kind": "compute#firewall",
    "id": "2342562096469303266",
    "creationTimestamp": "2024-09-26T06:26:37.639-07:00",
    "name": "default-allow-rdp",
    "description": "Allow RDP from anywhere",
    "network": "https://www.googleapis.com/compute/v1/projects/testing-project-123/global/networks/default",
    "priority": 65534,
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "3389"
        ],
        "portRanges": [
          {
            "beginPort": "3389",
            "endPort": "3389"
          }
        ]
      }
    ],
    "direction": "INGRESS",
    "logConfig": {
      "enable": false
    },
    "disabled": false,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/testing-project-123/global/firewalls/default-allow-rdp",
    "c7n:MatchedFilters": [
      "network",
      "name"
    ]
  },
  {
    "kind": "compute#firewall",
    "id": "2007825320515264482",
    "creationTimestamp": "2024-09-26T06:26:37.617-07:00",
    "name": "default-allow-ssh",
    "description": "Allow SSH from anywhere",
    "network": "https://www.googleapis.com/compute/v1/projects/testing-project-123/global/networks/default",
    "priority": 65534,
    "sourceRanges": [
      "0.0.0.0/0"
    ],
    "allowed": [
      {
        "IPProtocol": "tcp",
        "ports": [
          "22"
        ],
        "portRanges": [
          {
            "beginPort": "22",
            "endPort": "22"
          }
        ]
      }
    ],
    "direction": "INGRESS",
    "logConfig": {
      "enable": false
    },
    "disabled": false,
    "selfLink": "https://www.googleapis.com/compute/v1/projects/testing-project-123/global/firewalls/default-allow-ssh",
    "c7n:MatchedFilters": [
      "network",
      "name"
    ]
  }
]
